<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="application_name">Vocabimate Demo</string>

    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="retry">Retry</string>

    <string name="selection_disabled">Disabled</string>

    <string name="selection_default">Default</string>

    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>

    <string name="enable_random_adaptation">Enable random adaptation</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>

    <string name="ima_not_loaded">Playing sample without ads, as the IMA extension was not loaded</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_library">Library</string>
    <string name="title_others">Others</string>
    <string name="title_notifications">Notifications</string>
    <string name="downloading">Downloading...</string>
    <string name="completed">Completed.</string>
    <string name="processing">Processing...</string>
    <string name="unable_to_download">Unable to download.</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete">Do you want to delete this offline video?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="download">Download</string>
    <string name="do_you_want_to_download">Do you want to download this video?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vocabimate">VOCABIMATE</string>
    <string name="some_text_claiming_that_the_app_is_the_new_talk_in_the_town">SOME TEXT CLAIMING THAT THE APP IS THE NEW TALK IN THE TOWN.</string>
    <string name="some_text">ALSO, JACK SAID HE WAS GREAT WHEN HE\'S AROUND DANIELS</string>
    <string name="login">LOGIN</string>
    <string name="join_us">JOIN US</string>
    <string name="string_bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="enter_email">USER ID</string>
    <string name="enter_password">PASSWORD</string>

</resources>
