<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/voca_header_bg"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/d_20"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/btnLoginFacebook"
                style="@style/ButtonsDefault.Facebook"
                android:text="@string/login_with_facebook"
                android:textAllCaps="false"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnLoginGoogle"
                style="@style/ButtonsDefault.Google"
                android:layout_marginBottom="@dimen/margin_bottom_24"
                android:layout_marginTop="@dimen/d_20"
                android:text="@string/login_with_google"
                android:textAllCaps="false"
                android:visibility="gone" />

            <!--<View-->
                <!--android:layout_width="240dp"-->
                <!--android:layout_height="1dp"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginBottom="@dimen/margin_bottom_24"-->
                <!--android:layout_marginTop="@dimen/margin_top_default"-->
                <!--android:background="@color/divider" />-->

            <EditText
                android:id="@+id/etSignupEmail"
                style="@style/EditTextDefault"
                android:drawablePadding="@dimen/drawable_padding_default"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etSignupPassword"
                style="@style/EditTextDefault"
                android:drawablePadding="@dimen/drawable_padding_default"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/btnSignupLogin"
                style="@style/ButtonsDefault.BottomSheet"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/primary" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>