<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.VocalLoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/back" />


        <LinearLayout
            android:id="@+id/llTop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivLogoLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_v_image_height"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/v" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivLogoLogin"
                    android:gravity="center"
                    android:text="@string/vocabimate"
                    android:textSize="@dimen/sp_24" />

            </LinearLayout>


            <TextView
                android:id="@+id/tvImportantText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/some_text_claiming_that_the_app_is_the_new_talk_in_the_town"
                android:textSize="30sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvMoreImportantText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/some_text"
                android:textSize="@dimen/sp_14" />


        </LinearLayout>
    </RelativeLayout>


    <!-- bottom sheet layout -->
    <RelativeLayout
        android:id="@+id/sheetRL"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
        app:layout_behavior="@string/string_bottom_sheet_behavior">

        <LinearLayout
            android:id="@+id/llLoginSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_peek_height"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llLogin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/primary"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:gravity="center|center_vertical"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:letterSpacing=".1"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llJoinUs"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/voca_header_bg"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:gravity="center|center_vertical"
                    android:text="@string/join_us"
                    android:letterSpacing=".1"
                    android:textAllCaps="true"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />
            </LinearLayout>



        </LinearLayout>
        <View
            android:id="@+id/division"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/llLoginSignUp"
            android:background="@color/primary"/>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/viewBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/division"
            android:elevation="@dimen/z_bottom_sheet">

            <RelativeLayout
                android:id="@+id/relativeLayoutBottomSheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_bottom_sheet">


                <LinearLayout
                    android:id="@+id/llLoginView"
                    android:layout_width="match_parent"
                    android:layout_height="400dp">

                    <include layout="@layout/bottom_sheet_login" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSignUpView"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:visibility="gone">

                    <include layout="@layout/bottom_sheet_signup" />
                </LinearLayout>
            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
